# wasm-data

./: .gitignore
client/: Cargo.toml
client/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
server/static/: index.html
shared/: Cargo.toml
shared/src/: lib.rs
