[package]
name = "client"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies]
shared = { path = "../shared" }

log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"

wasm-bindgen = "0.2"
futures = "0.3"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wasm-streams = "0.1"

serde_json = "1.0"
serde-wasm-bindgen = "0.1"
bincode = "1.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "ReadableStream",
]