[package]
name = "server"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
shared = { path = "../shared" }
serde_json = "1.0"
bincode = "1.3"
rand = "0.7"
lazy_static = "1.4"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["serve", "json"]